objects/GP_Atributo_de_una_transaccion__c.object
<CustomObject>
    <fields>
        <fullName>Nombre_Atributo__c</fullName>
        <label>Nombre Atributo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_de_API__c</fullName>
        <label>Nombre de API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Atributo__c</fullName>
        <label>Tipo de Atributo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Evento__c</fullName>
        <label>Tipo de Evento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confiabilización</fullName>
                </value>
                <value>
                    <fullName>Premio Recarga 3M</fullName>
                </value>
                <value>
                    <fullName>Castigo Recarga</fullName>
                </value>
                <value>
                    <fullName>Recarga por Monto</fullName>
                </value>
                <value>
                    <fullName>Upselling</fullName>
                </value>
                <value>
                    <fullName>Cater</fullName>
                </value>
                <value>
                    <fullName>Antigüedad</fullName>
                </value>
                <value>
                    <fullName>Alta a FOL</fullName>
                </value>
                <value>
                    <fullName>Continuidad FOL</fullName>
                </value>
                <value>
                    <fullName>Alta a Débito Automatico</fullName>
                </value>
                <value>
                    <fullName>Descarga APP</fullName>
                </value>
                <value>
                    <fullName>Alta Nuevo Servicio Core</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Convergente Fiber</fullName>
                </value>
                <value>
                    <fullName>Convergente Arnet</fullName>
                </value>
                <value>
                    <fullName>Bienvenida</fullName>
                </value>
                <value>
                    <fullName>Baja</fullName>
                </value>
                <value>
                    <fullName>Transferencia</fullName>
                </value>
                <value>
                    <fullName>Canje</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>GP Atributo de una transaccion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nombre_Atributo__c</columns>
        <columns>Nombre_de_API__c</columns>
        <columns>Tipo_de_Atributo__c</columns>
        <columns>Tipo_de_Evento__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de GP_Atributo_</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GP Atributos de una transaccion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>